[build-system]
requires = ["requests"]
build-backend = "defillama"

[project]
name = "JafarSadiq"
version = "0.0.1"
authors = [
  { name="Jafar Sadiq", email="jsadiqk92@gmail.com" },
]
description = "defillama API Module"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jafark92/defillama"
"Bug Tracker" = "https://github.com/jafark92/defillama/issues"